--- a/package.json
+++ b/package.json
@@ -10,37 +10,37 @@
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
-    "@icons-pack/react-simple-icons": "^13.6.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@icons-pack/react-simple-icons": "^13.8.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.513.0",
+    "lucide-react": "^0.561.0",
     "millify": "^6.1.0",
-    "next": "15.4.4",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
     "radix-ui": "latest",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-leaflet": "5.0.0-rc.2",
-    "tailwind-merge": "^3.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-leaflet": "5.0.0",
+    "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/leaflet": "^1.9.20",
-    "@types/node": "^20.19.9",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "eslint": "^9.32.0",
-    "eslint-config-next": "15.3.3",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5.8.3"
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^25.0.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.0.10",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
